# poc_cv_manager_frontend

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json
app/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  startup.sh  tailwind.config.js
app/src/: index.html  main.rs  router.rs
app/src/assets/css/: custom.css
app/src/models/: client_company.rs  cv.rs  job_function.rs  keyword.rs  mod.rs  user.rs
app/src/services/: client_companies.rs  cvs.rs  job_functions.rs  keywords.rs  mod.rs  users.rs
app/src/views/: blog.rs  client_companies.rs  cvs.rs  home.rs  job_functions.rs  keywords.rs  mod.rs  navbar.rs  not_found.rs  page404.rs  shared.rs  test.html  users.rs
