[package]
name = "app"
version = "0.1.0"
authors = ["jranita <14070264+jranita@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }

dioxus-router = { version = "0.4", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
async-recursion = "1.0.5"

